# Culling-plugin

./: .gitignore  CMakeLists.txt  README.md  manifest.json
.github/workflows/: build.yml
src/: main.cpp
src/culling logic/: culling.hpp
